salesforce/metadata/objects/MSD_ObjectMapping__mdt.object
<CustomMetadata>
    <label>MSD Object Mapping</label>
    <pluralLabel>MSD Object Mappings</pluralLabel>
    <fields>
        <fullName>SourceObject__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetSystem__c</fullName>
        <label>Target System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetEntity__c</fullName>
        <label>Target Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
</CustomMetadata>